Revert "Downgrade target Java version to Java 8"
This reverts commit a912947695a607c0c9ff2e091f93ad9d7b81c0da.